--- a/proxy/package.json
+++ b/proxy/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.13.2",
     "colors": "^1.3.1",
     "express": "^4.13.1",
-    "http-proxy": "^1.11.1"
+    "http-proxy": "^1.11.1",
+    "util": "^0.11.0"
   },
   "devDependencies": {},
   "scripts": {
